--- a/reset.css
+++ b/reset.css
@@ -1,4 +1,12 @@
 *{
+  
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
+}
+ 
+body{ 
     background-color: rgb(245, 245, 231);
 }
 
