--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 header{
+    justify-content: left;
 
 }
 
@@ -11,13 +12,13 @@ main{
 
 }
 
-.header{
-
-}
-
-h1{
+li{
+    display: flex;
+    padding: 20px;
     text-align: right;
+    justify-content:flex-end;
 }
+
 
 footer{
     text-align: left;
@@ -35,18 +36,41 @@ h3{
     
 }
 
+.container {
+    position: relative;
+    text-align: center;
+  }
+
+
+
+#avatar{
+    float:left;
+    box-sizing: border-box;
+    width: 10%;
+    border: 3px;
+    border-color: black;
+    padding: auto;
+}
 img{
-    width: 60%
+    display: block;
+    padding: 25px;
+    width: 30%;
+    float:right;
+    border-color: black;
+    border-width: 20px;
+    margin: auto;
 
 }
+
+
 section{
-    background-color: rgb(44, 12, 173);
+    background-color: rgb(224, 224, 132);
     text-align: left;
 
 }
 
-.digital-void{
-
+#digital-void{
+    width: 60%;
 }
 
 .container{
@@ -59,6 +83,19 @@ section{
     .flex-container {width: 100%;}
 }
 
+.topic{
+    position: absolute;
+    bottom: 20px;
+    left: 16px;
+    background-color: rgb(226, 191, 101);
+}
+
+.subtopic{ 
+    position: absolute;
+    bottom: 0px;
+    left: 16px;
+    background-color: rgb(226, 191, 101);
+}
 /* add hover feature
 
 
